ChangeLog file for BBWin
==============================================================


BBWin 0.11 Preview version -  January XXth 2008
-------------------

*svcs centralized mode


BBWin 0.10 Preview version -  December 30th 2007
-------------------

+New Features
* Msgs agent reports parts of description events when the message file contening the 
  static string can't be found. It will reports as the Windows Event Viewer, just like this :
  "The description for Event ID ( XXX ) in Source ( XXX ) cannot be found.
  The local computer may not have the necessary registry information or message
  DLL files to display messages from a remote computer. You may be able to use
  the /AUXSOURCE= flag to retrieve this description; see Help and Support for details.
  The following information is part of the event: XXXXX, XXXXX."
* You can use environment variables in the bbwinupdate agent. Example :
  <setting name="filename" value="bbwin\%COMPUTERNAME%.cfg" />
* svcs services rules can be used with comments
* disk agent can monitor free space from XX-rom drive and not only if a media is inserted.
             (feature requested to monitor dvd-ram burning state)
* disk agent can monitor volume mount points
* Proxy access : BBWin can access to your hobbit server through a proxy (http proxy)
  You can specify a user/password if you use http proxy basic authentification.
* disk agent will alert you if a disk monitored with a custum rule disappear from the Server.
  (Example : external usb harddrive turned off)
* uptime agent : add max delay option to get alerts when servers are up for a too long time
* who agent : report current connected users on the servers

** Centralized mode for agents cpu, disk, memory, msgs, netstat, ports, procs, timediff, uptime
** Centralized mode graphing network traffic
** See the bbWin webpage 


BBWin 0.9 Preview version - December 5th 2006
-------------------


+ New Features